# user_oauth_stripe_skeleton

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/: 0001_init_db.up.sql
src/: error.rs  main.rs
src/modules/: mod.rs
src/modules/auth/: mod.rs
src/modules/auth/api/: handler.rs  mod.rs  routes_config.rs
src/modules/auth/domain/: error.rs  jwt.rs  mod.rs  model.rs
src/modules/auth/provider/: mod.rs  provider.rs
src/modules/payment/: mod.rs  service.rs
src/modules/payment/api/: hander.rs  routes_config.rs
src/modules/payment/domain/: error.rs  models.rs  ports.rs
src/modules/payment/infrastructure/: db_adatper.rs
src/modules/stripe/: app_service.rs  mod.rs  service.rs
src/modules/stripe/api/: hander.rs  handler.rs  mod.rs  routes_config.rs
src/modules/stripe/domain/: error.rs  mod.rs  models.rs
src/modules/stripe/infrastructure/: db_adatper.rs
src/modules/stripe_payments/: app_service.rs
src/modules/stripe_payments/api/: handler.rs  routes_config.rs
src/modules/stripe_payments/domain/: error.rs  models.rs  ports.rs
src/modules/stripe_payments/infrastructure/: db_adatper.rs  mod.rs
src/modules/subscription/: app_service.rs  mod.rs
src/modules/subscription/api/: handler.rs  routes_config.rs
src/modules/subscription/domain/: error.rs  models.rs  ports.rs
src/modules/subscription/infrastructure/: db_adatper.rs
src/modules/suscription/: service.rs
src/modules/tier/: service.rs
src/modules/user/: mod.rs  service.rs
src/utils/: config.rs  middleware.rs  mod.rs  postgres.rs
(+17 files in other folders)
