[package]
name = "user_oauth_stripe_skeleton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls","chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1.71"
env_logger = "0.8.3"
log = "0.4.19"
actix-cors = "0.6.4"
thiserror = "1.0.58"
chrono = "0.4.38"
jsonwebtoken = "7"
oauth2 = { version = "4", features = ["reqwest"], default-features = false }
reqwest = { version = "0.11", features = ["json"] }  
futures = "0.3.30"
actix-web-lab = "0.20.2"
async-stripe = { version = "0.31", features = ["runtime-tokio-hyper"] }
